# gear-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  justfile  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.cursor/rules/: specify-rules.mdc
.github/workflows/: tests.yml
.specify/memory/: constitution.md
data/: build123.md
docs/: README.md  environment.md  index.md  quickstart.md  scaffold.md  utilities.md
docs/assets/: environment-sample.json  hello_gear.json  hello_gear.step  hello_gear.stl  sample-measurements.yaml  sample-printer.yaml  tolerance_coupon.json  tolerance_coupon.step  tolerance_coupon.stl
ideas/: iris.md  plan.md
specs/001-cad-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cad-foundations/checklists/: requirements.md
specs/001-cad-foundations/contracts/: README.md  openapi.yaml
specs/001-gearbox-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gearbox-plan/checklists/: requirements.md
specs/001-gearbox-plan/contracts/: gear-plan.openapi.yaml
src/generators/cli/: main.py
src/generators/core/environment/: __init__.py  checks.py  scaffold.py
src/generators/core/utils/: __init__.py  exporters.py  logging.py  materials.py  measurements.py  tolerances.py
src/generators/examples/: __init__.py  hello_gear.py
src/generators/gearboxes/: __init__.py  schema.py
tests/configs/: spur_invalid.yaml  spur_valid.yaml
tests/integration/: __init__.py  test_cli_environment.py  test_cli_examples.py  test_cli_gear_plan.py  test_cli_tolerances.py
tests/unit/: __init__.py  test_cli_main.py  test_environment_checks.py  test_exporters.py  test_gear_configs.py  test_log_utils.py  test_materials.py  test_measurements.py  test_scaffold_validator.py  test_tolerances.py
